--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
         "sourceType": "module"
     },
     "rules": {
-        "prefer-const": "error"
+        "prefer-const": "error",
+        "semi": ["error", "always"],
+        "no-var": "error"
     }
 }
