--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "if-js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/js/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install",
-    "lint": "prettier  --write . && eslint main.js --fix"
+    "lint": "prettier  --write . && eslint src/js/main.js --fix",
+    "prepublish": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,13 @@
   },
   "homepage": "https://github.com/SvetaDanilchyk/if-js#readme",
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@ngneat/falso": "^7.2.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "prettier": "3.2.5"
   }
 }
